@@ -1,4 +1,8 @@
-﻿drkns 31.12.2013 00:38:12 +0200 - build 3749
+﻿drkns 31.12.2013 03:05:45 +0200 - build 3750
+
+1. Нажатие F4 в меню групп масок приводило к падению.
+
+drkns 31.12.2013 00:38:12 +0200 - build 3749
 
 1. Рефакторинг.
 
